--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="style.css" rel="stylesheet" type="text/css" media="screen">
+	<title>Conversor de Bases</title>
 </head>
 
 <body ng-app="app" ng-controller="ctrl">
@@ -47,7 +48,7 @@
 				</div>
 			</fieldset>
     
-			<p class="copyright"><a href="https://catolicasc.org.br" target="_blank" title="Colorlib">Catolica Santa Catarina</a></p>
+			<p class="copyright"><a href="http://catolicasc.org.br" target="_blank" title="Colorlib">Catolica Santa Catarina</a> | <a href="https://github.com/vanderHobus/ConversorBases" target="_blank" title="Colorlib">Hosted with ♥ by GitHub</a></p>
 		</form>
 	</div>
 	
